apps/base/swpt-debtors/login/flush-deactivate-users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-flush-deactivate-users
  labels:
    app.kubernetes.io/name: swpt-login
    app.kubernetes.io/component: flush-deactivate-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: swpt-login
      app.kubernetes.io/component: flush-deactivate-users
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swpt-login
        app.kubernetes.io/component: flush-deactivate-users
        log.pipeline: swpt-python-logging
    spec:
      priorityClassName: login-webserver
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: flush-deactivate-users
          image: swpt-login
          args: ['flush_deactivate_users']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
