apps/base/swpt-debtors/login/web-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-web-server
  labels:
    app.kubernetes.io/name: swpt-login
    app.kubernetes.io/component: web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: swpt-login
      app.kubernetes.io/component: web-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: swpt-login
        app.kubernetes.io/component: web-server
        log.pipeline: swpt-python-logging
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: swpt-login
                app.kubernetes.io/component: web-server
            topologyKey: kubernetes.io/hostname
            matchLabelKeys:
            - pod-template-hash
      priorityClassName: login-webserver
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: web-server
          image: swpt-login
          args: ['webserver']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /debtors-login/healthz
              port: http
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /debtors-login/healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: login-web-server
  labels:
    app.kubernetes.io/name: swpt-login
    app.kubernetes.io/component: web-server
spec:
  selector:
    app.kubernetes.io/name: swpt-login
    app.kubernetes.io/component: web-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
